# subclass-getter

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: poetry-version-patch.yml  tests.yml
subclass_getter/: __init__.py  get_subclasses.py
