[project]
name = "subclass-getter"
version = "0.1.4"
description = "Gets subclasses of a class recursively"
readme = "README.md"
authors = [{ name = "Tesla2000", email = "fratajczak124@gmail.com" }]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
